feat: Update browser extension to Showdown VGC Team Sheet Extension
- Changed package name and version in package.json
- Added Prettier for code formatting
- Updated content script to fetch PDF file and post message
- Enhanced injected script to handle PDF data and generate team sheet
- Improved PDF generation logic with new utility functions
- Refactored stat evaluation logic for better readability
- Added popup HTML for bug reporting
- Updated webpack configuration to include HTML and PDF files
- Added type definitions for Pokémon and VGC sheet data structures

--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,23 @@
 {
-  "manifest_version": 3,
-  "name": "Showdown VGC Team Sheet Extension",
-  "version": "0.1.0",
-  "description": "An extension to export team to a VGC sheet on Pokémon Showdown.",
-  "permissions": [
-    "scripting",
-    "activeTab"
-  ],
-  "content_scripts": [
-    {
-      "matches": [
-        "https://play.pokemonshowdown.com/*"
-      ],
-      "js": [
-        "dist/content.js"
-      ],
-      "run_at": "document_end"
-    }
-  ],
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "dist/injected.js"
-      ],
-      "matches": [
-        "https://play.pokemonshowdown.com/*"
-      ]
-    }
-  ]
+	"manifest_version": 3,
+	"name": "Showdown VGC Team Sheet Extension",
+	"version": "0.1.0",
+	"description": "An extension to export team to a VGC sheet on Pokémon Showdown.",
+	"permissions": ["scripting", "activeTab"],
+	"action": {
+		"default_popup": "dist/popup.html"
+	},
+	"content_scripts": [
+		{
+			"matches": ["https://play.pokemonshowdown.com/*"],
+			"js": ["dist/content.js"],
+			"run_at": "document_end"
+		}
+	],
+	"web_accessible_resources": [
+		{
+			"resources": ["dist/injected.js", "dist/base.pdf"],
+			"matches": ["https://play.pokemonshowdown.com/*"]
+		}
+	]
 }
