--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "webpack",
 		"watch": "webpack --watch",
 		"start": "webpack serve",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"build-extension": "build.sh"
 	},
 	"keywords": [
 		"browser",
