refactor: enhance build script to support multiple browser targets and improve directory structure

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"watch": "webpack --watch",
 		"start": "webpack serve",
 		"format": "prettier --write .",
-		"build-extension": "build.sh"
+		"build-chrome": "build.sh chrome",
+		"build-firefox": "build.sh firefox"
 	},
 	"keywords": [
 		"browser",
