--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.2.0",
 	"description": "An extension to export team to a VGC sheet on Pokémon Showdown.",
 	"icons": {
-		"128": "public/128.png"
+		"128": "128.png"
 	},
 	"action": {
 		"default_popup": "dist/popup.html"
